feat(debug): Introduce developer mode for enhanced debugging information
- Added a DEV_MODE configuration to toggle developer-specific features.
- Updated game logic to display enemy levels and additional debug information when DEV_MODE is enabled.
- Modified README files to remove references to the F3 key for showing enemy levels, reflecting the new debug features.
- Enhanced localization files to support new debug-related text.
- Improved UI to conditionally render developer information based on the DEV_MODE setting.

--- a/thunder_fighter/localization/en.json
+++ b/thunder_fighter/localization/en.json
@@ -5,10 +5,11 @@
     "TIME": "Time: {:.1f}m",
     "ENEMIES": "Enemies: {}/{}",
     "HIGH_LEVEL_ENEMIES": "High-Level Enemies: {}",
-    "PLAYER_BULLET_INFO": "Bullets: {} paths, {} speed",
-    "PLAYER_SPEED_INFO": "Speed: {}",
+    "PLAYER_BULLET_SPEED_INFO": "Bullet Speed: {}",
+    "PLAYER_BULLET_PATHS_INFO": "Bullet Paths: {}",
+    "PLAYER_SPEED_INFO": "Move Speed: {}",
     "PLAYER_WINGMEN_INFO": "Wingmen: {}",
-    "BOSS_HEALTH": "BOSS HP: {}/{}",
+    "BOSS_HEALTH": "Boss: {}/{}",
     "PAUSED": "PAUSED",
     "GAME_OVER": "Game Over",
     "VICTORY": "VICTORY!",
@@ -46,9 +47,9 @@
     "MUSIC_VOLUME_LABEL": "Music Volume:",
     "HEALTH_RESTORED": "Health Restored!",
     "ADVANCED_TO_LEVEL": "Advanced to Level {}!",
-    "GAME_PAUSED": "GAME PAUSED",
-    "RESUME_PROMPT": "Press P to resume",
-    "CONTROLS_INFO": "Controls: Arrow keys to move, Space to shoot",
+    "GAME_PAUSED": "Game Paused",
+    "RESUME_PROMPT": "Press P to Resume",
+    "CONTROLS_INFO": "M: Toggle Music, S: Toggle Sound, +/-: Volume",
     "LEVEL_UP": "LEVEL UP! {} → {}",
     "ENEMIES_CLEARED": "Enemies Cleared: {}",
     "BOSS_BONUS": "Boss Bonus: +{}",
