--- a/thunder_fighter/localization/zh.json
+++ b/thunder_fighter/localization/zh.json
@@ -5,10 +5,11 @@
     "TIME": "时间: {:.1f}分",
     "ENEMIES": "敌人: {}/{}",
     "HIGH_LEVEL_ENEMIES": "高级敌人: {}",
-    "PLAYER_BULLET_INFO": "子弹: {}弹道, {}速度",
-    "PLAYER_SPEED_INFO": "速度: {}",
-    "PLAYER_WINGMEN_INFO": "僚机: {}",
-    "BOSS_HEALTH": "BOSS血量: {}/{}",
+    "PLAYER_BULLET_SPEED_INFO": "子弹速度: {}",
+    "PLAYER_BULLET_PATHS_INFO": "弹道数量: {}",
+    "PLAYER_SPEED_INFO": "移动速度: {}",
+    "PLAYER_WINGMEN_INFO": "僚机数量: {}",
+    "BOSS_HEALTH": "首领: {}/{}",
     "PAUSED": "已暂停",
     "GAME_OVER": "游戏结束",
     "VICTORY": "胜利!",
@@ -48,7 +49,7 @@
     "ADVANCED_TO_LEVEL": "已晋级到第 {} 关！",
     "GAME_PAUSED": "游戏暂停",
     "RESUME_PROMPT": "按 P 键继续",
-    "CONTROLS_INFO": "操作：方向键移动，空格键射击",
+    "CONTROLS_INFO": "M: 开/关音乐, S: 开/关音效, +/-: 音量",
     "LEVEL_UP": "升级! {} → {}",
     "ENEMIES_CLEARED": "敌机清空: {}",
     "BOSS_BONUS": "BOSS奖励: +{}",
