--- a/thunder_fighter/localization/en.json
+++ b/thunder_fighter/localization/en.json
@@ -19,7 +19,7 @@
     "RESTART_PROMPT": "Press R to Restart",
     "QUIT_PROMPT": "Press Q to Quit",
     "EXIT_PROMPT": "Press ESC to Exit",
-    "SURVIVAL_TIME": "Survival Time: {} minutes",
+    "SURVIVAL_TIME": "Survival Time: {:.1f} minutes",
     "BOSS_APPEARED": "Level {} Boss has appeared!",
     "BOSS_DEFEATED": "Boss Defeated! +{} score",
     "BOSS_ENTERED_AGGRESSIVE": "Boss is now in AGGRESSIVE mode!",
