feat(game): Implement game over state and restart functionality
- Introduced a game over state flag to manage game over conditions.
- Added a method to restart the game, resetting all relevant game states and player attributes.
- Updated event handling to allow for game over actions, including restarting the game with the 'R' key.
- Enhanced UI components to display a semi-transparent overlay and game over panel with performance summary.
- Updated localization files to include new game over prompts and statistics.
- Improved test coverage for UI components related to game over functionality.

--- a/thunder_fighter/localization/en.json
+++ b/thunder_fighter/localization/en.json
@@ -55,5 +55,8 @@
     "BOSS_BONUS": "Boss Bonus: +{}",
     "STAGE_COMPLETE": "Stage Complete!",
     "FINAL_BOSS_DEFEATED": "Final Boss Defeated!",
-    "GAME_COMPLETED": "Congratulations! You have completed Thunder Fighter!"
+    "GAME_COMPLETED": "Congratulations! You have completed Thunder Fighter!",
+    "RESTART_GAME": "Press R to Restart Game",
+    "GAME_STATISTICS": "Game Statistics",
+    "PERFORMANCE_SUMMARY": "Battle Summary"
 } 
