feat: implement comprehensive Chinese font support and fix localization issues
- Fix Chinese character display issue (tofu blocks) on macOS by implementing TTF-only font loading strategy
- Replace pygame.font.SysFont() with direct TTF font file loading for reliable Chinese character rendering
- Add macOS-specific Chinese font optimization in ResourceManager with system fonts mapping
- Fix language switching functionality by correcting event data key from 'action' to 'ui_action'
- Fix time display to show decimal values for game durations under 1 minute
- Implement complete UI localization by replacing all hardcoded English strings
- Add comprehensive localization keys for level indicators, boss status, score display, and level themes
- Update all UI components to use centralized font management through ResourceManager
- Enhance font caching system and add automatic fallbacks for missing fonts
- Update documentation with font system architecture and troubleshooting guide

Core Changes:
* ResourceManager: Add TTF-based font loading with macOS system font paths
* UI Components: Replace hardcoded strings with localization keys
* Font System: Eliminate SysFont usage for improved Chinese character support
* Localization: Add missing translation keys for complete multilingual support
* Documentation: Create comprehensive font system and localization guide

Fixes Chinese font display issues, language switching bugs, and incomplete localization coverage.

--- a/thunder_fighter/localization/en.json
+++ b/thunder_fighter/localization/en.json
@@ -58,5 +58,16 @@
     "GAME_COMPLETED": "Congratulations! You have completed Thunder Fighter!",
     "RESTART_GAME": "Press R to Restart Game",
     "GAME_STATISTICS": "Game Statistics",
-    "PERFORMANCE_SUMMARY": "Battle Summary"
+    "PERFORMANCE_SUMMARY": "Battle Summary",
+    "LEVEL_INDICATOR": "Level {}",
+    "BOSS_LEVEL_NORMAL": "BOSS Lv.{}",
+    "BOSS_LEVEL_DANGER": "BOSS Lv.{} [Danger]",
+    "BOSS_LEVEL_EXTREME": "BOSS Lv.{} [Extreme]",
+    "SCORE_DISPLAY": "Score: {}",
+    "LEVEL_THEME_DEEP_SPACE": "Deep Space",
+    "LEVEL_THEME_NEBULA_FIELD": "Nebula Field",
+    "LEVEL_THEME_ASTEROID_BELT": "Asteroid Belt",
+    "LEVEL_THEME_RED_ZONE": "Red Zone",
+    "LEVEL_THEME_FINAL_BATTLE": "Final Battle",
+    "SCORE_LEVEL_UP": "Score Level Up to {}!"
 } 
