Dev 0.7 fix Chinese character display issue (tofu blocks) on macOS  (#9)
* docs: update README and DETAILS files to reflect new dynamic background features and increased test coverage

- Enhanced both English and Chinese README files with details about the new dynamic level backgrounds, including visual themes and special effects.
- Updated test coverage information in README and DETAILS documents, reflecting an increase from 249 to 255 tests.
- Improved organization and clarity of project structure in documentation.

* feat(game): Implement game over state and restart functionality

- Introduced a game over state flag to manage game over conditions.
- Added a method to restart the game, resetting all relevant game states and player attributes.
- Updated event handling to allow for game over actions, including restarting the game with the 'R' key.
- Enhanced UI components to display a semi-transparent overlay and game over panel with performance summary.
- Updated localization files to include new game over prompts and statistics.
- Improved test coverage for UI components related to game over functionality.

* feat: implement comprehensive Chinese font support and fix localization issues

- Fix Chinese character display issue (tofu blocks) on macOS by implementing TTF-only font loading strategy
- Replace pygame.font.SysFont() with direct TTF font file loading for reliable Chinese character rendering
- Add macOS-specific Chinese font optimization in ResourceManager with system fonts mapping
- Fix language switching functionality by correcting event data key from 'action' to 'ui_action'
- Fix time display to show decimal values for game durations under 1 minute
- Implement complete UI localization by replacing all hardcoded English strings
- Add comprehensive localization keys for level indicators, boss status, score display, and level themes
- Update all UI components to use centralized font management through ResourceManager
- Enhance font caching system and add au

--- a/thunder_fighter/localization/zh.json
+++ b/thunder_fighter/localization/zh.json
@@ -55,5 +55,19 @@
     "BOSS_BONUS": "BOSS奖励: +{}",
     "STAGE_COMPLETE": "关卡完成!",
     "FINAL_BOSS_DEFEATED": "最终BOSS被击败!",
-    "GAME_COMPLETED": "恭喜！您已完成雷霆战机全部关卡！"
+    "GAME_COMPLETED": "恭喜！您已完成雷霆战机全部关卡！",
+    "RESTART_GAME": "按 R 重新开始游戏",
+    "GAME_STATISTICS": "游戏统计",
+    "PERFORMANCE_SUMMARY": "战斗总结",
+    "LEVEL_INDICATOR": "第{}关",
+    "BOSS_LEVEL_NORMAL": "首领 Lv.{}",
+    "BOSS_LEVEL_DANGER": "首领 Lv.{} [危险]",
+    "BOSS_LEVEL_EXTREME": "首领 Lv.{} [极限]",
+    "SCORE_DISPLAY": "得分: {}",
+    "LEVEL_THEME_DEEP_SPACE": "深空",
+    "LEVEL_THEME_NEBULA_FIELD": "星云地带",
+    "LEVEL_THEME_ASTEROID_BELT": "小行星带",
+    "LEVEL_THEME_RED_ZONE": "红色区域",
+    "LEVEL_THEME_FINAL_BATTLE": "最终之战",
+    "SCORE_LEVEL_UP": "得分等级提升至{}!"
 } 
